Fix text overflow in model response (#10)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,10 @@
   ::view-transition-new(root) {
     animation-duration: 400ms;
   }
+
+  code {
+    text-wrap: auto;
+  }
 }
 
 nextjs-portal {
